=== Monitor Release Notes ===
See [MonitorDocs/ResfulApi,the Monitor application wiki page] for documentation


Added bonjour support for monitor service, requires bonjour libraries to be installed on target machine jvm.
Changed share URL from /dav to /webdav to fit the apache standard
Added a seperate handler for the webdav handler, port 8023

== 2010/03/18 ==
Added support for reading and updating server name from the bootstrap file, will be used for later bonjour support.
Updated HTML forms for the embedded website.

Released [attachment:wiki:SoftwareReleases:eLife_monitor_2.3.zip V2.3] 

== 2010/03/17 ==
Added libs to the distribution zip, changed references from /ext to /monitor_ext to allow parallel isntallation
with eLife server.

Released [attachment:wiki:SoftwareReleases:eLife_monitor_2.2.zip V2.2] 

== 2010/03/16 ==
Add a property for datafiles location
eg.  -DeSmart_install="../eLife_Server" -Dmonitor_web="./monitor_web" -Ddatafiles="../eLife_Server/datafiles"

Released [attachment:wiki:SoftwareReleases:eLife_monitor_2.1.zip V2.1] 


== 2010/02/28 ==
Rewrote as a Restful interface for admin functions
Incorporated WEBDAV to simplify access to eLife file system
Incorporated an embedded web application to allow access to monitor functions without requiring the admin tool.
To run the embedded web application goto https://server:8082/ , log in using your elife admin account
Brought java libs in line with eLife libs to simplify release process.
To install, unzip and ensure monitor_web is parallel to the bin directory containing the jar file.
Launch using java -jar eMonitor.jar with bin as the current directory, other current directories can be used
however the path to the server installation and the web installation will need to be specified using java 
environment commands.
eg.  -DeSmart_install="../eLife_Server" -Dmonitor_web="./monitor_web"

Released [attachment:wiki:SoftwareReleases:eLife_monitor_2.0.zip V2.0] 

== 2005/12/11 ==